# lorawan-chatbot

./: README.md
backend/: pyproject.toml
frontend/: package.json
rag-app-lorawan/: requirements.txt
rag-app-lorawan/app-llama/backend/: Dockerfile  main.py  pyproject.toml
rag-app-lorawan/app-llama/frontend/: index.html  package-lock.json  package.json
rag-app-lorawan/app-llama/frontend/src/: App.tsx
rag-app-lorawan/data/faq/: qa-test-cases.csv
rag-app-lorawan/data/prompt_evaluation/: prompt-analysis-v2-evals.csv  prompt-analysis-v2-questions.csv  prompt-analysis-v2-responses.csv  prompt-analysis-v2-responses.json
rag-app-lorawan/notebooks/: 01_data_articles_collection.ipynb  05_evaluate_rag_llamaidx.ipynb  06_anthropic_model.ipynb  07_improve_hyperparameters.ipynb  optuna_rag_lora_study.db
