[tool.poetry]
name = "rag-app-lorawan"
version = "0.1.0"
description = ""
authors = ["jorgechvz <cha22060@byui.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
markdownify = "^0.13.1"
beautifulsoup4 = "^4.12.3"
urllib3 = "^2.2.3"
requests = "^2.32.3"
pandas = "^2.2.2"
pinecone = "^5.1.0"
python-dotenv = "^1.0.1"
numpy = "1.26.4"
llama-index-core = "^0.11.9"
llama-index-cli = "^0.3.1"
llama-index-llms-openai = "^0.2.7"
llama-index-embeddings-openai = "^0.2.5"
llama-index-agent-openai = "^0.3.1"
llama-index = "^0.11.9"
llama-parse = "^0.5.5"
llama-index-vector-stores-pinecone = "^0.2.1"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
umap = "^0.1.1"
llama-index-llms-anthropic = "^0.3.1"
optuna = "^4.0.0"
cohere = "^5.10.0"
llama-index-embeddings-cohere = "^0.2.1"
llama-index-embeddings-voyageai = "^0.2.2"
llama-index-embeddings-gemini = "^0.2.0"
deepeval = "^1.3.4"
llama-index-postprocessor-cohere-rerank = "^0.2.1"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
